Add new wefrag service Pix to header.

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -20,7 +20,8 @@
       <a href="http://jeutu.com">Jeutu</a> |
       <a href="http://www.wefrag.com">Forums</a> |
       <a href="http://blogs.wefrag.com">Blogs</a> (<a href="http://blogs.wefrag.com/jeux/">jeux</a>) |
-      <a href="http://play.wefrag.com">Weplay</a>
+      <a href="http://play.wefrag.com">Weplay</a> |
+      <a href="http://pix.wefrag.com">Pix</a>
     </div>
   </div>
   <div id="body">
