--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -4,7 +4,7 @@
   De :
 </div>
 <div class="span-20 last">
-  <%= h(topic.user || current_user) %>
+  <%= h topic.user %>
 </div>
 <div class="span-4">
   Sujet :
