--- a/app/views/forums/show.html.erb
+++ b/app/views/forums/show.html.erb
@@ -1,3 +1,5 @@
+<div class="forum">
+
 <div class="header span-24">
 <% menu = capture do %>
   <div class="span-14">
@@ -33,3 +35,6 @@
 <div class="footer span-24">
 <%= menu %>
 </div>
+
+</div>
+
