--- a/app/views/search/show.html.erb
+++ b/app/views/search/show.html.erb
@@ -38,7 +38,7 @@
 </table>
 </div>
 
-<div class="pager span-121212121212121212121212 prepend-12">
+<div class="pager span-12 prepend-12">
   <%= pager %>
 </div>
 
