display time tracking

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -7,7 +7,7 @@
 <table class="list posts">
   <tr>
     <th class="author span-4">Auteur</th>
-    <th class="post span-20 last">Message</th>
+    <th class="post span-20 last">Message <%= show_topic_spent_time(@topic, current_user) %></th>
   </tr>
   <%= render :partial => @posts, :locals => { :forum => @forum, :topic => @topic, :action_class => 'actions' } %>
 </table>
