fix shoutbox partial name

--- a/app/views/shouts/_box.js.erb
+++ b/app/views/shouts/_box.js.erb
@@ -1,1 +1,1 @@
-<%= render :partial => 'list.html.erb', :locals => { :shouts => shouts } %>
+<%= render :partial => 'shouts/list.html.erb', :locals => { :shouts => shouts } %>
