rename user/ => my/ routes

--- a/app/views/my/password/new.html.erb
+++ b/app/views/my/password/new.html.erb
@@ -4,7 +4,7 @@
 
 <%= content_tag(:div, 'Identifiant ou adresse e-mail incorrect', :class => :errorExplanation) if request.post? %>
 
-<% form_tag user_password_index_path do %>
+<% form_tag my_password_index_path do %>
   <div class="span-4">
     Identifiant ou adresse e-mail :
   </div>
