--- a/app/views/user/password_reset_mailer/create.html.erb
+++ b/app/views/user/password_reset_mailer/create.html.erb
@@ -3,5 +3,5 @@ Bonjour,
 Vous venez de demander un nouveau mot de passe sur Wefrag, 
 cliquez sur le lien ci-dessous pour confirmer la demande :
 
-<%= user_password_url @password_reset.code %>
+<%= my_password_url @password_reset.code %>
 
