--- a/app/views/layouts/application.openid.erb
+++ b/app/views/layouts/application.openid.erb
@@ -19,7 +19,7 @@
     <div class="container">
       <a href="http://www.nofrag.com">Nofrag</a> |
       <a href="http://www.pushselect.com">PushSelect</a> |
-      <a href="http://www.wefrag.com">Forums</a> |
+      <a href="/">Forums</a> |
       <a href="http://blogs.wefrag.com">Blogs</a> (<a href="http://blogs.wefrag.com/jeux/">jeux</a>) |
       <a href="http://play.wefrag.com">Weplay</a> |
       <a href="http://pix.wefrag.com">Pix</a>
