--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -14,7 +14,7 @@ sas_target='';                // Targeting
 SmartAdServer(sas_pageid,sas_formatid,sas_target);
 </script></div>
       <% end %>
-      <span class="login"><%= user_login post.user %></span>:
+      <span class="login"><%= user_login post.user %>:</span>
       <%= format_text post.body %>
     </div>
     <div class="info">
